compiler/tools/fpp-check/test/port_numbering/duplicate_input_connection_at_matched_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/duplicate_input_connection_at_matched_port.fpp:26.9
        c3.pOut -> c1.pIn[0]
        ^
error: duplicate connection at matched port pIn[0]
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/duplicate_input_connection_at_matched_port.fpp:25.9
        c2.pOut -> c1.pIn[0]
        ^
